--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-from zipfile import ZipFile
-from io import BytesIO
-
-# Contenu du fichier index.html
-html_content = """ 
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -10,17 +5,202 @@ html_content = """
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Thierno Maadjou BAH - Créatif numérique</title>
   <style>
-    /* styles ici (raccourcis pour lisibilité) */
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #333333;
+      --accent-color: #007acc;
+      --card-color: #f0f0f0;
+    }
+
+    [data-theme="dark"] {
+      --bg-color: #121212;
+      --text-color: #f0f0f0;
+      --accent-color: #66ccff;
+      --card-color: #1e1e1e;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    header {
+      text-align: center;
+      padding: 40px 20px 20px;
+    }
+
+    header img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      border: 4px solid var(--accent-color);
+    }
+
+    header h1 {
+      margin: 15px 0 5px;
+      font-size: 2.5em;
+    }
+
+    header p {
+      font-size: 1.1em;
+      color: var(--accent-color);
+    }
+
+    nav {
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: var(--accent-color);
+      font-weight: bold;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    section {
+      margin-bottom: 40px;
+    }
+
+    .card {
+      background-color: var(--card-color);
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #777;
+    }
+
+    .socials a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: var(--text-color);
+    }
+
+    .dark-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: var(--accent-color);
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 20px;
+      cursor: pointer;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      background-color: white;
+    }
+
+    [data-theme="dark"] input,
+    [data-theme="dark"] textarea {
+      background-color: #2c2c2c;
+      color: white;
+      border: 1px solid #444;
+    }
+
+    button.submit-btn {
+      margin-top: 10px;
+      background-color: var(--accent-color);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button.submit-btn:hover {
+      opacity: 0.9;
+    }
   </style>
 </head>
 <body>
-  <!-- contenu ici -->
+
+  <button class="dark-toggle" onclick="toggleTheme()">🌙 / ☀️</button>
+
+  <header>
+    <img src="https://i.pravatar.cc/120?img=60" alt="Portrait de Thierno Maadjou BAH" />
+    <h1>Thierno Maadjou BAH</h1>
+    <p>Créatif numérique & passionné par les technologies émergentes</p>
+  </header>
+
+  <nav>
+    <a href="#about">À propos</a>
+    <a href="#projects">Projets</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <div class="container">
+    <section id="about" class="card">
+      <h2>À propos</h2>
+      <p>Bonjour ! Je suis <strong>Thierno Maadjou BAH</strong>, un passionné de technologie, de design et d’innovation numérique. Mon parcours croise le développement web, la créativité visuelle et l’analyse des systèmes intelligents. Je m’efforce de construire des solutions élégantes, performantes et accessibles à tous.</p>
+    </section>
+
+    <section id="projects" class="card">
+      <h2>Projets récents</h2>
+      <ul>
+        <li><strong>OpenEdu</strong> – Une plateforme d’apprentissage en ligne open source.</li>
+        <li><strong>DataPulse</strong> – Dashboard interactif pour visualiser des données en temps réel.</li>
+        <li><strong>HumanConnect</strong> – Réseau social éthique centré sur les valeurs humaines.</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="card">
+      <h2>Me contacter</h2>
+      <form onsubmit="alert('Merci ! Votre message a été envoyé.'); return false;">
+        <label>Votre nom</label>
+        <input type="text" required />
+        <label>Votre email</label>
+        <input type="email" required />
+        <label>Message</label>
+        <textarea rows="5" required></textarea>
+        <button class="submit-btn" type="submit">Envoyer</button>
+      </form>
+    </section>
+
+    <section class="card socials">
+      <h2>Réseaux</h2>
+      <p>
+        <a href="#">🌐 Site personnel</a>
+        <a href="#">💼 LinkedIn</a>
+        <a href="#">🐦 Twitter</a>
+        <a href="#">📸 Instagram</a>
+      </p>
+    </section>
+  </div>
+
+  <footer>
+    &copy; 2025 Thierno Maadjou BAH. Tous droits réservés.
+  </footer>
+
+  <script>
+    function toggleTheme() {
+      document.documentElement.dataset.theme = 
+        document.documentElement.dataset.theme === "dark" ? "light" : "dark";
+    }
+    // Thème par défaut : clair
+    document.documentElement.dataset.theme = "light";
+  </script>
+
 </body>
 </html>
-"""  # Remplacez cette ligne par le contenu complet fourni précédemment si nécessaire
-
-# Créer le fichier ZIP
-with ZipFile("thierno-portfolio.zip", "w") as zip_file:
-    zip_file.writestr("index.html", html_content)
-
-print("Fichier ZIP créé : thierno-portfolio.zip")
